# ExternalSort

./: .gitignore  CMakeLists.txt  README.md
include/: externalSort.h  tape.h
src/: externalSort.cpp  main.cpp  tape.cpp
test/: test.cpp
test/test_data/: small_example
